force-app/main/default/objects/Interaction__c/fields/Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested__c</fullName>
    <description>What services are requested</description>
    <formula>IF((IF(INCLUDES(Assistance_Request__c,&quot;Business Planning&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Business Registration&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Financing&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Financials/Accounting&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Government Information&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Import / Export&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Intellectual Property&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Market Research&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Marketing&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Insurance&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Real Estate&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Mentoring&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Referral&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Startup - General Info&quot;),1,0) + IF(INCLUDES(Assistance_Request__c,&quot;Legal - General&quot;),1,0))&gt;1,&quot;Consultation&quot;,&quot;Walk-In&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What services are requested</inlineHelpText>
    <label>Service Requested</label>
    <type>Text</type>
</CustomField>