force-app/main/default/objects/Interaction__c/fields/Survey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Date__c</fullName>
    <description>This will be the date referenced by Survey workflow to sent out the business outcome survey notification after 30, 60 and 90 days</description>
    <inlineHelpText>This will be the date referenced by Survey workflow to sent out the business outcome survey notification after 30, 60 and 90 days</inlineHelpText>
    <label>Survey Start Date</label>
    <type>Date</type>
</CustomField>