force-app/main/default/objects/Interaction__c/fields/Target_Customers__c.field-meta.xml
<CustomField>
    <fullName>Target_Customers__c</fullName>
    <description>Identifying Business&#39; Target Customers</description>
    <inlineHelpText>Identifying Business&#39; Target Customers</inlineHelpText>
    <label>Target Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>