force-app/main/default/objects/Interaction__c/fields/Trigger_Business_Outcome_Survey__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Business_Outcome_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to trigger the Business Outcome Survey Workflow. The value in the will be populated through before trigger if no related events and online registration records are found.</description>
    <inlineHelpText>This field will be used to trigger the Business Outcome Survey Workflow. The value in the will be populated through before trigger if no related events and online registration records are found.</inlineHelpText>
    <label>Trigger Business Outcome Survey</label>
    <type>Checkbox</type>
</CustomField>