force-app/main/default/objects/Interaction__c/fields/User_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>User_to_Notify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field field will be populated using trigger to send an email notification based on Client Satisfaction survey and will be hidden from page layout</description>
    <inlineHelpText>This field field will be populated using trigger to send an email notification based on Client Satisfaction survey and will be hidden from page layout</inlineHelpText>
    <label>User to Notify</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>