force-app/main/default/objects/Interaction__c/fields/what_is_your_current_GFA__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_current_GFA__c</fullName>
    <description>How much total floor space at this location</description>
    <inlineHelpText>How much total floor space at this location</inlineHelpText>
    <label>What is your current GFA?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>