force-app/main/default/objects/Interaction__c/fields/What_Strat_Bus_and_or_Trade_Alliances__c.field-meta.xml
<CustomField>
    <fullName>What_Strat_Bus_and_or_Trade_Alliances__c</fullName>
    <description>Question</description>
    <inlineHelpText>Question</inlineHelpText>
    <label>What Strat. Bus. and/or Trade Alliances</label>
    <length>255</length>
    <type>Text</type>
</CustomField>