force-app/main/default/objects/Interaction__c/recordTypes/Company_Intelligence.recordType-meta.xml
<RecordType>
    <fullName>Company_Intelligence</fullName>
    <active>true</active>
    <description>Interaction for tracking new Company Intelligence</description>
    <label>Company Intelligence</label>
</RecordType>