force-app/main/default/objects/Interaction__c/recordTypes/Company_Intelligence_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>Company_Intelligence_Person_Account</fullName>
    <active>true</active>
    <description>This record type will be assigned to any interaction associated with Person Account.</description>
    <label>Company Intelligence Person Account</label>
</RecordType>