force-app/main/default/objects/Interaction__c/recordTypes/Consultation.recordType-meta.xml
<RecordType>
    <fullName>Consultation</fullName>
    <active>true</active>
    <description>Interaction for providing new Business Consultation</description>
    <label>Consultation</label>
</RecordType>