force-app/main/default/objects/Interaction__c/recordTypes/Consultation_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>Consultation_Person_Account</fullName>
    <active>true</active>
    <description>This will be assigned to Interaction of consultation type associated to Person Account</description>
    <label>Consultation Person Account</label>
</RecordType>