force-app/main/default/objects/Interaction__c/recordTypes/Initiative_Interactions.recordType-meta.xml
<RecordType>
    <fullName>Initiative_Interactions</fullName>
    <active>true</active>
    <description>This Record Type is only applicable to associate any Initiative with Interaction</description>
    <label>Initiative Interactions</label>
</RecordType>