force-app/main/default/objects/Interaction__c/validationRules/Add_Export_Countries_Regions_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Export_Countries_Regions_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK(  Where_else_do_you_want_to_export_m__c ),TEXT( Do_You_Export__c )=&#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>Where_else_do_you_want_to_export_m__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>