force-app/main/default/objects/Interaction__c/validationRules/Contact_Required_for_Business_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Required_for_Business_Account</fullName>
    <active>true</active>
    <description>This rule is to validate that no interaction record is saved without associated contact if its linked to business Account</description>
    <errorConditionFormula>AND(NOT(Account__r.IsPersonAccount),ISBLANK(Contact__c))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact is required for Business Account</errorMessage>
</ValidationRule>