force-app/main/default/objects/Interaction__c/validationRules/Export_as_Percent_of_Sales_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Export_as_Percent_of_Sales_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK(   TEXT(Export_as_a_of_Sales__c)),TEXT( Do_You_Export__c )=&#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>Export_as_a_of_Sales__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>