force-app/main/default/objects/Interaction__c/validationRules/Inactive_Related_Account_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Related_Account_Validation_Rule</fullName>
    <active>true</active>
    <description>This Validation rule will avoid creating child interaction record for an inactive Account.</description>
    <errorConditionFormula>AND(ISNEW(), TEXT(Account__r.Active__c) = &#39;No&#39;)</errorConditionFormula>
    <errorMessage>Interaction record can not be created for Inactive Account.</errorMessage>
</ValidationRule>