force-app/main/default/objects/Interaction__c/validationRules/Int_in_Strat_Bus_Trade_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Int_in_Strat_Bus_Trade_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK(   TEXT( Int_in_Strat_Bus_and_or_Trade_Allianc__c )),TEXT( Do_You_Export__c )=&#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>Int_in_Strat_Bus_and_or_Trade_Allianc__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>