force-app/main/default/objects/Interaction__c/validationRules/Interaction_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Interaction_Name_Validation_Rule</fullName>
    <active>false</active>
    <description>This rule will avoid creating Interaction records that starts with special character.</description>
    <errorConditionFormula>NOT(REGEX((LEFT( Name , 1)), &quot;[a-zA-Z0-9]&quot;))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Interaction Name can not start with any special character.</errorMessage>
</ValidationRule>