force-app/main/default/objects/Interaction__c/validationRules/Interested_in_Export_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Interested_in_Export_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK(TEXT(Are_you_interested_in_Export__c)),TEXT( Do_You_Export__c )=&#39;No&#39;)</errorConditionFormula>
    <errorDisplayField>Are_you_interested_in_Export__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>