force-app/main/default/objects/Interaction__c/validationRules/Lease_Expiry_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Expiry_Date_Validation</fullName>
    <active>true</active>
    <description>This validation rule is to make sure user must specify Expiry date if Occupancy type in Lease</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK(Lease_Expiry__c),TEXT(Occupancy_Type__c)=&#39;Lease&#39;)</errorConditionFormula>
    <errorDisplayField>Lease_Expiry__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>