force-app/main/default/objects/Interaction__c/validationRules/What_Strat_Bus_Trade_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>What_Strat_Bus_Trade_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Company_Intelligence&#39;, ISBLANK( What_Strat_Bus_and_or_Trade_Alliances__c ),TEXT( Int_in_Strat_Bus_and_or_Trade_Allianc__c)=&#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>What_Strat_Bus_and_or_Trade_Alliances__c</errorDisplayField>
    <errorMessage>Required Input</errorMessage>
</ValidationRule>