force-app/main/default/objects/Interaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_By__c</columns>
    <columns>Created_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Location__c</columns>
    <columns>Interaction_Owner__c</columns>
    <columns>Purpose_of_the_Interaction__c</columns>
    <columns>Internal_Referral__c</columns>
    <columns>External_Referral__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>