force-app/main/default/objects/Interaction__c/listViews/All_Company_Intelligence_Interaction.listView-meta.xml
<ListView>
    <fullName>All_Company_Intelligence_Interaction</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Advisor_Lookup__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_of_Contact__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>Survey_Start_Date__c</columns>
    <columns>Client_Satisfaction_Survey_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Interaction__c.Company_Intelligence,Interaction__c.Company_Intelligence_Person_Account</value>
    </filters>
    <filters>
        <field>Legacy_Record_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Company Intelligence Interaction</label>
</ListView>