force-app/main/default/objects/Interaction__c/listViews/All_Consultation_Interactions.listView-meta.xml
<ListView>
    <fullName>All_Consultation_Interactions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Interaction_Owner__c</columns>
    <columns>Date_of_Contact__c</columns>
    <columns>Meeting_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Interaction__c.Consultation,Interaction__c.Consultation_Person_Account</value>
    </filters>
    <label>All Consultation Interactions</label>
</ListView>