force-app/main/default/objects/Interaction__c/listViews/Consultations_Last_Month.listView-meta.xml
<ListView>
    <fullName>Consultations_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Interaction_Owner__c</columns>
    <columns>Date_of_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Interaction__c.Consultation,Interaction__c.Consultation_Person_Account</value>
    </filters>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Consultations - Last Month</label>
</ListView>